# enum_extra

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
derive/: Cargo.toml
derive/src/: lib.rs
examples/: mask_iter.rs
lib/: Cargo.toml
lib/examples/: mask_iter.rs  nonzero.rs
lib/src/: lib.rs  marker.rs  mask.rs  nonzero.rs
lib/tests/: trybuild.rs
lib/tests/compile-fail/: nonzero.stderr  nonzero2.rs  nonzero2.stderr  nonzero_default_fail.rs  nonzero_default_fail.stderr  nonzero_fail_1.rs  nonzero_fail_1.stderr  nonzero_fail_2.rs  nonzero_fail_2.stderr  nonzero_fail_3.rs  nonzero_fail_3.stderr
lib/tests/pass/: nonzero1.rs  nonzero_pass_1.rs  nonzero_pass_2.rs  nonzero_pass_3.rs
src/: lib.rs  mask.rs
