[package]
name = "enum_extra"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
num-traits = "0.2.14"
strum = {version = "0.23.0", git="https://github.com/ratmice/strum.git", branch="enum_metadata"}

[dev-dependencies]
strum_macros = {version = "0.23.0", git="https://github.com/ratmice/strum.git", branch="enum_metadata"}
